Fix: Cập nhật thư viện conflict. Chore: Sửa link ảnh bị 404. Style: Sửa scrollbar smooth

--- a/src/components/CustomCursor/style.css
+++ b/src/components/CustomCursor/style.css
@@ -14,15 +14,15 @@ body {
 .cursor-outer {
     margin-left: -15px;
     margin-top: -15px;
-    width: 40px;
-    height: 40px;
+    width: 42px;
+    height: 42px;
     border: 1px solid var(--color-main);
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     z-index: 9999;
     opacity: .5;
-    -webkit-transition: all .1s ease-out;
-    transition: all .1s ease-out;
+    -webkit-transition: all .075s ease-out;
+    transition: all .075s ease-out;
     background: linear-gradient(#fff, #fff) padding-box, linear-gradient(to right, #12c2e9, #D641A7, #F64F59) border-box;
     border-radius: 50px;
     border: 2px solid transparent !important;
@@ -35,16 +35,16 @@ body {
 .cursor-inner {
     margin-left: 2px;
     margin-top: 2px;
-    width: 6px;
-    height: 6px;
+    width: 8px;
+    height: 8px;
     z-index: 10000001;
     background-color: #12c2e9;
     transition: width .3s ease-in-out, height .3s ease-in-out, margin .3s ease-in-out, opacity .3s ease-in-out;
 }
 
 .cursor-inner.cursor-hover {
-    margin-left: -40px;
-    margin-top: -40px;
+    margin-left: -42px;
+    margin-top: -42px;
     width: 80px;
     height: 80px;
     background-color: white;
